update pagination buttons on mobile, resolves #2

--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -264,6 +264,14 @@
   }
 }
 
+.hide-on-mobile {
+  display: none;
+}
+
+.show-on-mobile {
+  display: flex;
+}
+
 @media (min-width: 48rem) {
   .card-container {
     flex-direction: row;
@@ -311,5 +319,13 @@
     &__menu {
       left: 0;
     }
+  }
+
+  .hide-on-mobile {
+    display: flex;
+  }
+
+  .show-on-mobile {
+    display: none;
   }
 }
